@@ -9,6 +9,7 @@
    multisession mode.
  * Fixed problems with filenames ending in backslashes.
  * Fixed verification problems with localized characters.
+ * Added error handling for incorrectly encoded filenames.
  * Automatically use a newly installed version of an external application at the next K3b start.
  * Complete new set of K3b action icons for project types and tools. Many thanks to Marcel Dierkes.
  * Show text on the burn button to make it catch the eye.
